<resources>
    <string name="app_name">Warehouse Assistant</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="go_to_registry">Go to registry</string>
    <string name="go_to_login">Go to login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_out">Log Out</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="user_not_found">User not found!</string>
    <string name="email_in_use">E-mail already in use!</string>
    <string name="other_error">Unidentified error occurred!</string>
    <string name="home">Home</string>
    <string name="items">Items</string>
    <string name="price_and_value">Price: $%1$.2f</string>
    <string name="id_and_value" translatable="false">ID: %s</string>
    <string name="price">Price</string>
    <string name="fab_content_desc" translatable="false">FAB</string>
    <string name="enter_data">Enter data</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="name">Name</string>
    <string name="apply">Apply</string>
    <string name="provide_item_dialog" translatable="false">provide_item_dialog</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="inventory">Inventory</string>
    <string name="amount">Amount</string>
    <string name="nfc_tag_image" translatable="false">NFC Tag Image</string>
    <string name="writing_to_the_tag">Writing to the tag</string>
    <string name="provide_nfc_dialog" translatable="false">provide_nfc_dialog</string>
    <string name="cannot_find_item">Cannot find item with given ID</string>
    <string name="written_to_the_tag">Written to the NFC Tag</string>
    <string name="hello_user_title">Hello, %s!</string>
    <string name="description_home">This application requires Internet access and NFC, so make sure you have both turned on before using it.</string>
    <string name="items_description">Preview, add, edit and delete items from the database.</string>
    <string name="inventory_description">Carrying out an inventory of available goods.</string>
    <string name="inventory_procedure">Inventory procedure</string>
    <string name="confirm">Confirm</string>
    <string name="id">ID</string>
    <string name="itemsToConfirm">To confirm</string>
    <string name="itemsConfirmed">Confirmed</string>
    <string name="summary">Summary</string>
    <string name="amount_and_value">%s pcs</string>
    <string name="item_completed">Item is already completed</string>
    <string name="nothing">-</string>
    <string name="id_placeholder">ID:</string>
    <string name="name_placeholder">Name:</string>
    <string name="correct">Correct</string>
    <string name="difference_and_value">Difference: %s</string>
    <string name="icon_image">icon_image</string>
    <string name="timestamp_edited_and_value">Last edition: %s</string>
    <string name="use_nfc_tag">Use the NFC tag to read the item.</string>
    <string name="items_not_found">No records! Add a new one.</string>
    <string name="are_you_sure_to_logout">Are you sure you want to log out?</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_to_finish_inventory">Are you sure you want to finish the inventory?</string>
    <string name="search_item">Search item</string>
    <string name="finish_inventory">Finish inventory</string>
    <string name="add_new_item">Add new item</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="turn_on_wifi_and_nfc">Turn on Internet and NFC.</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="required">Required</string>
    <string name="ok">OK</string>
</resources>