<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="pl.sokols.warehouseassistant.ui.main.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/itemsFragment"
        android:name="pl.sokols.warehouseassistant.ui.main.items.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/items_fragment" />
    <fragment
        android:id="@+id/inventoryFragment"
        android:name="pl.sokols.warehouseassistant.ui.main.inventory.InventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/inventory_fragment" />
</navigation>